[gd_scene load_steps=19 format=3 uid="uid://dl14jxmhwgs8t"]

[ext_resource type="PackedScene" uid="uid://lg2wrwk18qfu" path="res://src/objects/item.tscn" id="1"]
[ext_resource type="Script" path="res://src/MainBattle.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dth8sfhxwrcko" path="res://src/objects/ui/Avatar.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://dj2w5ne2g1l85" path="res://src/objects/ui/HealthBar.tscn" id="4"]
[ext_resource type="FontFile" uid="uid://8k3yck5k4s37" path="res://assets/fonts/WigglyCurvesRegular.ttf" id="5"]
[ext_resource type="PackedScene" uid="uid://2sl4px8rsn2y" path="res://src/objects/ui/SpellBox.tscn" id="6"]
[ext_resource type="PackedScene" uid="uid://dm7h7ekv3dwi3" path="res://src/objects/ui/ManaBar.tscn" id="7"]
[ext_resource type="PackedScene" uid="uid://utepmund3668" path="res://src/objects/ui/MessageHint.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://do4aqkob0wmxx" path="res://assets/icons/spells/enemy/8.png" id="9"]
[ext_resource type="PackedScene" uid="uid://bly4iwxixhlv7" path="res://src/objects/ui/PauseControl.tscn" id="10"]
[ext_resource type="AudioStream" uid="uid://baraq22fijg01" path="res://assets/sound/fire_explosion.wav" id="11"]
[ext_resource type="AudioStream" uid="uid://ctp8k2whppy62" path="res://assets/sound/select_spell.wav" id="12"]
[ext_resource type="AudioStream" uid="uid://d2sg51w7kc8w2" path="res://assets/sound/lose.wav" id="13"]
[ext_resource type="AudioStream" uid="uid://dmkjlwi2birow" path="res://assets/sound/win.wav" id="14"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("5")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0

[sub_resource type="FontFile" id="2"]
fallbacks = Array[Font]([ExtResource("5")])
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/96/0/ascent = 0.0
cache/0/96/0/descent = 0.0
cache/0/96/0/underline_position = 0.0
cache/0/96/0/underline_thickness = 0.0
cache/0/96/0/scale = 1.0

[sub_resource type="Animation" id="3"]
resource_name = "PlayerTimer"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MessageLabel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fy8au"]
_data = {
"PlayerTimer": SubResource("3")
}

[node name="MainBattle" type="Node2D"]
script = ExtResource("2")
item_scene = ExtResource("1")
message_hint = ExtResource("8")

[node name="MessageGroup" type="Node2D" parent="."]
z_index = 101
position = Vector2(500, 20)

[node name="MessageLabel" type="Label" parent="MessageGroup"]
offset_right = 300.0
offset_bottom = 18.0
pivot_offset = Vector2(150, 9)
theme_override_fonts/font = SubResource("1")
theme_override_font_sizes/font_size = 20
text = "Prepearing..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="BigLabel" type="Label" parent="MessageGroup"]
offset_top = 300.0
offset_right = 40.0
offset_bottom = 314.0
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 96
text = "You win!"
horizontal_alignment = 1

[node name="MessageAnimationPlayer" type="AnimationPlayer" parent="MessageGroup"]
libraries = {
"": SubResource("AnimationLibrary_fy8au")
}

[node name="EnemyHealthBar" parent="." instance=ExtResource("4")]
z_index = 100
position = Vector2(960, 20)

[node name="PlayerAvatar" parent="." instance=ExtResource("3")]
z_index = 101
position = Vector2(17, 80)

[node name="PlayerHealthBar" parent="." instance=ExtResource("4")]
z_index = 100
position = Vector2(20, 20)

[node name="PlayerManaBar" parent="." instance=ExtResource("7")]
z_index = 101
position = Vector2(20, 50)

[node name="EnemyAvatar" parent="." instance=ExtResource("3")]
z_index = 101
position = Vector2(1200, 50)
is_enemy = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="PlayerTimer" type="Timer" parent="."]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="GameTimer" type="Timer" parent="."]

[node name="FinishTimer" type="Timer" parent="."]
one_shot = true

[node name="RewardTimer" type="Timer" parent="."]

[node name="FireSoundTimer" type="Timer" parent="."]
wait_time = 1.4
one_shot = true

[node name="BackgroundGroup" type="Node2D" parent="."]

[node name="TextureRect" type="TextureRect" parent="BackgroundGroup"]
offset_top = -300.0
offset_right = 3840.0
offset_bottom = 1860.0
scale = Vector2(0.5, 0.5)

[node name="PlayerSpellBox" parent="." instance=ExtResource("6")]
position = Vector2(17, 180)

[node name="EnemySpell" type="Node2D" parent="."]

[node name="EnemySpellRect" type="TextureRect" parent="EnemySpell"]
offset_left = 1128.0
offset_top = 64.0
offset_right = 1640.0
offset_bottom = 576.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("9")

[node name="UIControlGroup" type="Node2D" parent="."]
z_index = 120

[node name="PauseControl" parent="UIControlGroup" instance=ExtResource("10")]
position = Vector2(24, 672)

[node name="AudioFirePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11")
volume_db = -1.0

[node name="AudioSelectSpellPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12")
volume_db = -1.0

[node name="AudioLosePlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13")
volume_db = -1.0

[node name="AudioWinPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14")
volume_db = -1.0

[connection signal="enemy_won" from="." to="." method="_on_MainBattle_enemy_won"]
[connection signal="player_won" from="." to="." method="_on_MainBattle_player_won"]
[connection signal="animation_finished" from="MessageGroup/MessageAnimationPlayer" to="." method="_on_MessageAnimationPlayer_animation_finished"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="PlayerTimer" to="." method="_on_PlayerTimer_timeout"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="timeout" from="FinishTimer" to="." method="_on_FinishTimer_timeout"]
[connection signal="timeout" from="RewardTimer" to="." method="_on_RewardTimer_timeout"]
[connection signal="timeout" from="FireSoundTimer" to="." method="_on_FireSoundTimer_timeout"]
[connection signal="spell_selected" from="PlayerSpellBox" to="." method="_on_PlayerSpellBox_spell_selected"]
